metrique-aggregation/tests/ui/fail/aggregate_no_strategy.stderr
error: field 'a' requires #[aggregate(strategy = ...)] attribute
 --> tests/ui/fail/aggregate_no_strategy.rs:7:5
  |
7 |     a: usize,
  |     ^
